refactor: 문법 수정